Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18510

sanity-sec test_63: crash in ll_prep_md_op_data()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Marc Vef <mvef@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/1cce5dad-32d7-49c9-99eb-f23dc5f43227

      test_63 failed with the following error:

      onyx-77vm4 crashed during sanity-sec test_63
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/109325 - 4.18.0-553.27.1.el8_10.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/109325 - 4.18.0-553.27.1.el8_lustre.x86_64

      <<Please provide additional information about the failure here>>
      Backtrace of the crash:

      [ 1409.915879] kernel BUG at mm/slub.c:380!
      [ 1409.916685] invalid opcode: 0000 [#1] SMP PTI
      [ 1409.917523] CPU: 0 PID: 61874 Comm: ll_sa_61873 Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.27.1.el8_10.x86_64 #1
      [ 1409.919673] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [ 1409.920724] RIP: 0010:set_freepointer.part.57+0x0/0x10
      [ 1409.921712] Code: 83 ef 70 e9 a2 5e fa ff 66 90 0f 1f 44 00 00 41 54 55 53 48 8b 06 48 85 c0 0f 85 a6 8b 00 00 5b 5d 41 5c c3 cc cc cc cc 66 90 <0f> 0b 66 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 00 53 48 89 fb e8 e7
      [ 1409.924964] RSP: 0018:ffffac5b03093c48 EFLAGS: 00010246
      [ 1409.925940] RAX: ffff88ce9c4e1408 RBX: ffff88ce9c4e1408 RCX: ffff88ce9c4e1608
      [ 1409.927220] RDX: 000000000001a83b RSI: 0000000000000000 RDI: ffff88ce80003340
      [ 1409.928517] RBP: ffffdb5604713800 R08: 0000000080000000 R09: 0000000000000000
      [ 1409.929805] R10: ffff88ce9f528000 R11: ffff88ce9f527c40 R12: ffff88ce80003340
      [ 1409.931087] R13: ffff88ce9c4e1408 R14: ffffffffc0e954cf R15: 0000000000000000
      [ 1409.932386] FS:  0000000000000000(0000) GS:ffff88cebbc00000(0000) knlGS:0000000000000000
      [ 1409.933845] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [ 1409.934902] CR2: 00005594bd4f9f44 CR3: 0000000026a10005 CR4: 00000000003706f0
      [ 1409.936183] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [ 1409.937475] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
      [ 1409.938747] Call Trace:
      [ 1409.939270]  ? __die_body+0x1a/0x60
      [ 1409.939958]  ? die+0x2a/0x50
      [ 1409.940535]  ? do_trap+0xe7/0x110
      [ 1409.941170]  ? print_track+0x20/0x20
      [ 1409.941856]  ? do_invalid_op+0x36/0x40
      [ 1409.942571]  ? print_track+0x20/0x20
      [ 1409.943254]  ? invalid_op+0x14/0x20
      [ 1409.943959]  ? ll_prep_md_op_data+0x2af/0x870 [lustre]
      [ 1409.945089]  ? print_track+0x20/0x20
      [ 1409.945773]  kfree+0x238/0x250
      [ 1409.946371]  ll_prep_md_op_data+0x2af/0x870 [lustre]
      [ 1409.947337]  sa_prep_data+0xde/0x350 [lustre]
      [ 1409.948207]  sa_statahead+0x3b9/0xd20 [lustre]
      [ 1409.949078]  ? snprintf+0x49/0x70
      [ 1409.949733]  ? ll_statahead_handle.constprop.31+0xff/0x170 [lustre]
      [ 1409.950919]  ll_statahead_thread+0x151f/0x2210 [lustre]
      [ 1409.951929]  ? finish_task_switch+0x86/0x2f0
      [ 1409.952748]  ? __schedule+0x2d9/0x870
      [ 1409.953465]  ? ll_statahead_handle.constprop.31+0x170/0x170 [lustre]
      [ 1409.954660]  kthread+0x134/0x150
      [ 1409.955305]  ? set_kthread_struct+0x50/0x50
      [ 1409.956108]  ret_from_fork+0x35/0x40
      [ 1409.956813] Modules linked in: lustre(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache intel_rapl_msr intel_rapl_common crct10dif_pclmul crc32_pclmul ghash_clmulni_intel joydev pcspkr virtio_balloon i2c_piix4 sunrpc ext4 mbcache jbd2 ata_generic crc32c_intel ata_piix serio_raw libata virtio_blk virtio_net net_failover failover
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-sec test_63 - onyx-77vm4 crashed during sanity-sec test_63

            qian_wc Qian Yingjin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: